完善swagger文档相关注释，前端通过openapi插件生成正确接口调用函数
