# backend/docs/swagger.yaml
@@ -1,31 +1,109 @@
+definitions:
+  request.InitProjectRequest:
+    properties:
+      adminAccount:
+        description: 管理员账号
+        type: string
+      adminPassword:
+        description: 管理员密码
+        type: string
+      dbName:
+        description: 数据库名
+        type: string
+      dbType:
+        description: 数据库类型
+        type: string
+      host:
+        description: 服务器地址
+        type: string
+      password:
+        description: 密码
+        type: string
+      port:
+        description: 端口
+        type: string
+      username:
+        description: 用户名
+        type: string
+    required:
+    - adminAccount
+    - adminPassword
+    - dbName
+    - dbType
+    - password
+    - username
+    type: object
+  response.CheckResult:
+    properties:
+      result:
+        description: 是否需要初始化
+        example: true
+        type: boolean
+    type: object
+  response.Response-any:
+    properties:
+      code:
+        example: 200
+        type: integer
+      data: {}
+      msg:
+        example: 成功
+        type: string
+    type: object
+  response.Response-response_CheckResult:
+    properties:
+      code:
+        example: 200
+        type: integer
+      data:
+        $ref: '#/definitions/response.CheckResult'
+      msg:
+        example: 成功
+        type: string
+    type: object
 info:
   contact: {}
   description: This is a sample server for Gin Swagger.
   title: Gin Swagger Demo API
   version: "1.0"
 paths:
-  /api/v1/articles/{id}:
-    delete:
-      parameters:
-      - description: 文章ID
-        in: path
-        name: id
-        required: true
-        type: integer
+  /init/check:
+    get:
+      consumes:
+      - application/json
+      description: 查看是否需要初始化
+      operationId: checkNeedInit
       produces:
       - application/json
       responses:
         "200":
-          description: 成功
+          description: OK
           schema:
-            type: string
-        "400":
-          description: 请求错误
+            $ref: '#/definitions/response.Response-response_CheckResult'
+      summary: checkNeedInit
+      tags:
+      - initController
+  /init/init_project:
+    post:
+      consumes:
+      - application/json
+      description: 当配置文件的数据库配置为空时，需要进行项目初始化
+      operationId: initProject
+      parameters:
+      - description: 初始化相关参数
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/request.InitProjectRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
           schema:
-            type: string
-        "500":
-          description: 内部错误
-          schema:
-            type: string
-      summary: 删除文章
+            $ref: '#/definitions/response.Response-any'
+      summary: 项目初始化
+      tags:
+      - initController
 swagger: "2.0"
