# backend/model/response/init.go
@@ -1,0 +1,5 @@
+package response
+
+type CheckResult struct {
+	Result bool `json:"result" example:"true"` // 是否需要初始化
+}
